--- a/fuploader/templates/downloads.html
+++ b/fuploader/templates/downloads.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Upload</title>
+    <title>Document</title>
 </head>
 <body>
-    <form action="/" method="post" enctype="multipart/form-data">{% csrf_token %}
-        {{ form.as_p }}  
-        <input type="submit" value="Upload">
-    </form>
-    {{files}}
+    <h2>Downloads</h2>
+    {% for f in files %}
+    <a href="http://localhost:8000/download/{{f}}">{{f}}</a>
+    {% endfor %}
 </body>
 </html>
